# django-react-toolkit

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  manage.py  setup.cfg
.github/workflows/: publish.yaml  test.yaml
django_react_toolkit/: apps.py  conf.py  proxy.py  urls.py  views.py
django_react_toolkit/management/commands/: runtkserver.py
tests/django_app/: settings.py  test_views.py  urls.py
tests/react_app/: .gitignore  package-lock.json  package.json
