[metadata]
name = django-react-toolkit
version = 0.0.4
description = Set of tools that gives you easy start with ReactJS integration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mka142/django-react-toolkit
author = Michał Kulbacki
author_email = mka@diveinai.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = 
    django_react_toolkit
include_package_data = True
python_requires = >=3.6
install_requires =
    Django >= 3.2